# rust-grpc

./: Cargo.toml  README.md  build.rs
proto/: Helloworld.proto  User.proto
src/: build.rs  client.rs  server.rs
src/db/: mongo.rs
src/db_services/: user_service.rs
src/structs/: data.rs
