[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde_json = "1.0.113"
tokio = "1.36.0"
tonic = "0.10.2"
tonic-build = "0.10.2"

[[bin]]
name= "server"
path="src/server.rs"

[[bin]]

name="client"
path="src/client.rs"
