[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
mongodb = "2.8.0"
prost = "0.12.3"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.5.0", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name= "server"
path="src/server.rs"

[[bin]]

name="client"
path="src/client.rs"
